gcc/gcc/testsuite/algol60.dg/fail/forstmt2.a60
'comment' { dg-do compile } ;
'begin'
  'integer' i;
'comment' { dg-error "expected" } ;  'for' i := 4, 'do'
    ;
'end';
